@@ -3,6 +3,7 @@ package com.tulio.banksofka.service;
 import com.tulio.banksofka.dto.AuditTransactionRequest;
 import com.tulio.banksofka.dto.BalanceDTO;
 import com.tulio.banksofka.dto.TransactionDTO;
+import com.tulio.banksofka.exception.InsufficientBalanceException;
 import com.tulio.banksofka.model.BankAccount;
 import com.tulio.banksofka.model.Transaction;
 import com.tulio.banksofka.model.User;
@@ -16,7 +17,6 @@ import java.time.LocalDateTime;
 import java.util.Comparator;
 import java.util.List;
 import java.util.Random;
-import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -26,6 +26,7 @@ public class AccountService {
     private final WebClient webClient;
 
     private static final String CUENTA_NO_ENCONTRADA = "Cuenta no encontrada";
+    private static final Random RANDOM = new Random();
 
 
     public AccountService(BankAccountRepository accountRepository, TransactionRepository transactionRepository, WebClient webClient) {
@@ -45,7 +46,7 @@ public class AccountService {
 
     // Modificación: Función pura, depende únicamente de la entrada (random).
     private String createRandomAccountNumber() {
-        return String.valueOf(new Random().nextInt(9000000) + 1000000);
+        return String.valueOf(RANDOM.nextInt(9000000) + 1000000);
     }
 
     // Modificación: Función pura, consulta la base de datos pero no modifica estado.
@@ -97,7 +98,7 @@ public class AccountService {
                 .orElseThrow(() -> new RuntimeException(CUENTA_NO_ENCONTRADA));
 
         if (account.getBalance() < amount) {
-            throw new RuntimeException("Saldo insuficiente");
+            throw new InsufficientBalanceException("Saldo insuficiente");
         }
 
         Double initialBalance = account.getBalance();
@@ -130,7 +131,7 @@ public class AccountService {
                 .stream()
                 .map(TransactionDTO::new)
                 .sorted(Comparator.comparing(TransactionDTO::getDate).reversed()) // Orden por fecha descendente
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public BalanceDTO getBalanceInfo(Long accountId) {
